
[TestApp/focus - 1]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[m[7m [m                   [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Pull Request───────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
╭─Threads────────────╮│                                        │
│  2                 ││                                        │
│  1                 ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
                      ╰────────────────────────────────────────╯
---

[TestApp/focus - 2]
╭─Message Assistant──╮╭─Thread─────────────────────────────────╮
│[37m[m[7m [m                   ││                                        │
│[37m[m[30m                    [m││                                        │
│[37m[m[30m                    [m││                                        │
╰────────────────────╯│                                        │
[32m╭─[0m[1;32mPull Request[m[32m───────╮[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Threads────────────╮│                                        │
│  2                 ││                                        │
│  1                 ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
                      ╰────────────────────────────────────────╯
---

[TestApp/focus - 3]
╭─Message Assistant──╮╭─Thread─────────────────────────────────╮
│[37m[m[7m [m                   ││                                        │
│[37m[m[30m                    [m││                                        │
│[37m[m[30m                    [m││                                        │
╰────────────────────╯│                                        │
╭─Pull Request───────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
[32m╭─[0m[1;32mThreads[m[32m────────────╮[m│                                        │
[32m│[m[44m  2[m[44m                 [m[32m│[m│                                        │
[32m│[m  1                 [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
                      ╰────────────────────────────────────────╯
---

[TestApp/focus - 4]
╭─Message Assistant──╮[32m╭─[0m[1;32mThread[m[32m─────────────────────────────────╮[m
│[37m[m[7m [m                   │[32m│[m                                        [32m│[m
│[37m[m[30m                    [m│[32m│[m                                        [32m│[m
│[37m[m[30m                    [m│[32m│[m                                        [32m│[m
╰────────────────────╯[32m│[m                                        [32m│[m
╭─Pull Request───────╮[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
╰────────────────────╯[32m│[m                                        [32m│[m
╭─Threads────────────╮[32m│[m                                        [32m│[m
│  2                 │[32m│[m                                        [32m│[m
│  1                 │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
╰────────────────────╯[32m│[m                                        [32m│[m
                      [32m╰────────────────────────────────────────╯[m
---

[TestApp/input - 1]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[mhey[7m [m                [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Pull Request───────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
╭─Threads────────────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
                      ╰────────────────────────────────────────╯
---

[TestApp/input - 2]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[m[7m [m                   [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                     hey│
[32m╰────────────────────╯[m│                                        │
╭─Pull Request───────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
╭─Threads────────────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
                      ╰────────────────────────────────────────╯
---

[TestApp/focus - 5]
[32m╭─[0m[1;32mMessage Assistant[m[32m──╮[m╭─Thread─────────────────────────────────╮
[32m│[m[37m[m[7m [m                   [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Pull Request───────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
╭─Threads────────────╮│                                        │
│  2                 ││                                        │
│  1                 ││                                        │
│                    ││                                        │
╰────────────────────╯│                                        │
                      ╰────────────────────────────────────────╯
---
